[gd_scene load_steps=5 format=1]

[ext_resource path="res://scn/level4.gd" type="Script" id=1]
[ext_resource path="res://scn/button.tscn" type="PackedScene" id=2]
[ext_resource path="res://art/spot.png" type="Texture" id=3]
[ext_resource path="res://fonts/NaziTypewriterRegular_g.fnt" type="BitmapFont" id=4]

[node name="level4" type="Node2D"]

script/script = ExtResource( 1 )

[node name="button-g" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 250.926, 316.967 )

[node name="Light2D" type="Light2D" parent="button-g"]

transform/pos = Vector2( -4.17599, -0.624023 )
transform/scale = Vector2( 0.47273, 0.389149 )
enabled = true
editor_only = false
texture = ExtResource( 3 )
offset = Vector2( 0, 0 )
scale = 2.3
color = Color( 0.992188, 1, 0, 1 )
energy = 1.0
mode = 2
range/height = 0.0
range/z_min = -1024
range/z_max = 1024
range/layer_min = 0
range/layer_max = 0
range/item_mask = 2
shadow/enabled = false
shadow/color = Color( 0, 0, 0, 0 )
shadow/buffer_size = 2048
shadow/esm_multiplier = 80.0
shadow/item_mask = 3

[node name="button-r" parent="." instance=ExtResource( 2 )]

visibility/light_mask = 2
transform/pos = Vector2( 771.932, 318.327 )
color_modulate = "Red"

[node name="Area2D" parent="button-r"]

visibility/light_mask = 2

[node name="Sprite" parent="button-r/Area2D"]

visibility/light_mask = 2

[node name="lights" parent="button-r"]

editor/display_folded = false
visibility/light_mask = 2

[node name="ligths1" parent="button-r/lights"]

visibility/light_mask = 2

[node name="ligths2" parent="button-r/lights"]

visibility/light_mask = 2

[node name="ligths3" parent="button-r/lights"]

visibility/light_mask = 2

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 310.0
margin/top = 109.0
margin/right = 707.0
margin/bottom = 150.0
custom_fonts/font = ExtResource( 4 )
text = "Mutatis mutandis"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="input_event" from="button-g/Area2D" to="button-g" method="_on_Area2D_input_event"]

[connection signal="mouse_enter" from="button-g/Area2D" to="button-g" method="_on_Area2D_mouse_enter"]

[connection signal="mouse_exit" from="button-g/Area2D" to="button-g" method="_on_Area2D_mouse_exit"]

[connection signal="input_event" from="button-r/Area2D" to="button-r" method="_on_Area2D_input_event"]

[connection signal="mouse_enter" from="button-r/Area2D" to="button-r" method="_on_Area2D_mouse_enter"]

[connection signal="mouse_exit" from="button-r/Area2D" to="button-r" method="_on_Area2D_mouse_exit"]


[editable path="button-g"]
[editable path="button-r"]
